--- a/src/app/components/articles/article/other/other.component.html
+++ b/src/app/components/articles/article/other/other.component.html
@@ -1,16 +1,14 @@
 <section class="other">
-    <h2>Articles liés</h2>
-    <div class="article-list">
-      <div class="article">
-        <h3>Titre de l'article lié 1</h3>
-        <p>Description de l'article lié 1</p>
-        <p>IMAGE</p>
-      </div>
-      <div class="article">
-        <h3>Titre de l'article lié 2</h3>
-        <p>Description de l'article lié 2</p>
-        <p>IMAGE</p>
-      </div>
+  <h2>Articles liés</h2>
+  <div class="article-list">
+    <div class="article">
+      <app-article-type-side></app-article-type-side>
     </div>
-  </section>
-  
+    <div class="article">
+      <app-article-type-side></app-article-type-side>
+    </div>
+    <div class="article">
+      <app-article-type-side></app-article-type-side>
+    </div>
+  </div>
+</section>
