--- a/src/app/pages/article/article.component.html
+++ b/src/app/pages/article/article.component.html
@@ -2,7 +2,7 @@
     <app-article-title class="title"></app-article-title>
     <app-article-body class="body"></app-article-body>
     <div class="article-bottom">
-        <div class="comment">&nbsp;</div>
+       <!-- <div class="comment">&nbsp;</div>-->
         <app-article-other class="other"></app-article-other>
     </div>
 </article>
