--- a/src/app/pages/categories/categories.component.scss
+++ b/src/app/pages/categories/categories.component.scss
@@ -110,6 +110,7 @@
           display: initial;
           color: $secondary-text-color;
           font-size: 1.5rem;
+          cursor: pointer;
 
           &:hover {
             color: $fairy-color;
