--- a/src/app/components/articles/article-type-side/article-type-side.component.scss
+++ b/src/app/components/articles/article-type-side/article-type-side.component.scss
@@ -1,36 +1,38 @@
 @use "/src/_import.scss" as *;
+
 .main-type2 {
-    background-color: $category-health-color;
-    
-    .side-band {
-        display:flex;
-        flex-direction:row;
-        margin-left: 0.5rem;
-        background-color: white;
+  background-color: $category-health-color;
 
-        img {
-            height:78px;
-        }
-    
-        .description {
-            margin-left:1rem;
-            
-            h4 {
-                color:$category-health-color;
-                font-weight: normal;
-                font-size:.8125rem;
-                margin-top:.3rem;
-                margin-bottom: .3rem;
-            }
+  .side-band {
+    display: flex;
+    flex-direction: row;
+    margin-left: 0.5rem;
+    background-color: white;
 
-            h3{
-                font-weight: normal;
-                font-size:.8125rem;
-                margin: 0;
-            }
-        }
-    
+    img {
+      height: 78px;
+      width: 138px;
     }
+
+    .description {
+      margin-left: 1rem;
+
+      h4 {
+        color: $category-health-color;
+        font-weight: normal;
+        font-size: .8125rem;
+        margin-top: .3rem;
+        margin-bottom: .3rem;
+      }
+
+      h3 {
+        font-weight: normal;
+        font-size: .8125rem;
+        margin: 0;
+      }
+    }
+
+  }
 
 
 
