--- a/src/app/pages/categories/categories.component.scss
+++ b/src/app/pages/categories/categories.component.scss
@@ -127,14 +127,14 @@
 
       app-article-type-small {
         width: 30%;
-        border: $fairy-color 1px solid;
-        box-shadow: 10px 10px 10px $fairy-color;
-        transition: 0.3s ease-in-out;
+        // border: $fairy-color 1px solid;
+        // // box-shadow: 10px 10px 10px $fairy-color;
+        // // transition: 0.3s ease-in-out;
 
-        &:hover {
-          border: $secondary-text-color 1px solid;
-          box-shadow: 10px 10px 10px $secondary-text-color;
-        }
+        // &:hover {
+        //   border: $secondary-text-color 1px solid;
+        //   box-shadow: 10px 10px 10px $secondary-text-color;
+        // }
       }
     }
   }
