--- a/src/app/components/articles/article/title/title.component.scss
+++ b/src/app/components/articles/article/title/title.component.scss
@@ -6,18 +6,17 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    margin-bottom: $small-border;
 
     h1 {
         font-size: 24px;
         color: $main-text-color;
         margin-bottom: $small-border;
-        ;
     }
 
     .categories {
         display: flex;
         align-items: baseline;
+        margin-bottom: $small-border;
 
     }
 
@@ -38,6 +37,7 @@
         margin-top: 10px;
         font-size: 14px;
         color: $main-text-color;
+        margin-top: $big-border;
     }
 
     .author {
@@ -70,7 +70,6 @@
         padding-left: $big-border; 
         padding-right: $big-border;
 
-
     }
 
     .publication-image {
@@ -79,5 +78,8 @@
         object-fit: cover;
         padding-left: $big-border; 
         padding-right: $big-border;
+        margin-bottom: $big-border;
     }
+
+   
 }
