--- a/src/app/components/articles/article-type-side/article-type-side.component.html
+++ b/src/app/components/articles/article-type-side/article-type-side.component.html
@@ -1,5 +1,5 @@
 
-<article [ngClass]="'main-type2 '+article.categories[0].slug+'-background'">
+<article [ngClass]="'main-type2 '+article.categories[0].slug+'-background'" [routerLink]="APP_ROUTES.articles+'/'+article.slug" [queryParams]="{id: article.id}">
     <div class="side-band">
         <img src={{article.publication_image}}>
         <div class="description">
