--- a/src/styles.scss
+++ b/src/styles.scss
@@ -52,3 +52,70 @@ a:visited {
     background-color: $secondary-background-color;
   }
 }
+
+h2.h2-title-article-food {
+  font-size: 1.5rem;
+  margin-bottom: $small-border;
+  color: $category-food-color;
+}
+
+p.p-article-food {
+  line-height: 1.5;
+  margin-bottom: $small-border;
+  margin-top: $small-border;
+}
+
+ol.ol-article-food {
+  list-style: none;
+}
+
+li.li-article-food {
+  margin-top: $small-border;
+  margin-bottom: $big-border;
+  padding-left: $big-border;
+}
+
+h2.h2-title-article-carie {
+  font-size: 1.5rem;
+  margin-bottom: $small-border;
+  color: $category-health-color;
+}
+
+p.p-article-carie {
+  line-height: 1.5;
+  margin-bottom: $small-border;
+  margin-top: $small-border;
+}
+
+ol.ol-article-carie {
+  list-style: none;
+}
+
+li.li-article-carie {
+  margin-top: $small-border;
+  margin-bottom: $big-border;
+  padding-left: $big-border;
+}
+
+
+h2.h2-title-article-sport {
+  font-size: 1.5rem;
+  margin-bottom: $small-border;
+  color: $category-sport-color;
+}
+
+p.p-article-sport {
+  line-height: 1.5;
+  margin-bottom: $small-border;
+  margin-top: $small-border;
+}
+
+ol.ol-article-sport {
+  list-style: none;
+}
+
+li.li-article-sport {
+  margin-top: $small-border;
+  margin-bottom: $big-border;
+  padding-left: $big-border;
+}
