--- a/src/styles.scss
+++ b/src/styles.scss
@@ -53,6 +53,7 @@ a:visited {
   }
 }
 
+/* Temporary before the content get change */
 h2.h2-title-article-food {
   font-size: 1.5rem;
   margin-bottom: $small-border;
