--- a/src/app/pages/categories/categories.component.scss
+++ b/src/app/pages/categories/categories.component.scss
@@ -127,6 +127,7 @@
 
       app-article-type-small {
         width: 30%;
+        /* CSS that we wish to keep and integrate later */
         // border: $fairy-color 1px solid;
         // // box-shadow: 10px 10px 10px $fairy-color;
         // // transition: 0.3s ease-in-out;
