--- a/src/app/pages/category/category.component.scss
+++ b/src/app/pages/category/category.component.scss
@@ -56,6 +56,7 @@
     .category-article {
       width: 95%;
       margin-bottom: $main-border;
+      /* CSS that we wish to keep and integrate later */
       // border: $fairy-color 1px solid;
       // box-shadow: 10px 10px 10px $fairy-color;
       // transition: 0.3s ease-in-out;
