--- a/src/app/components/articles/article/title/title.component.scss
+++ b/src/app/components/articles/article/title/title.component.scss
@@ -79,6 +79,50 @@
         color: $category-food-color;
     }
 
+    .categories-ca-coute-bonbon {
+        display: flex;
+        align-items: baseline;
+        margin-bottom: $small-border;
+
+    }
+
+    .categories-ca-coute-bonbon ul {
+        display: flex;
+        list-style: none;
+        margin: 0;
+        padding: 0;
+    }
+
+    .categories-ca-coute-bonbon li {
+        margin-right: 10px;
+        font-size: 16px;
+        font-family: "Glam-queen";
+        font-size: 3em;
+        color: $category-economy-color;
+    }
+
+    .categories-fun {
+        display: flex;
+        align-items: baseline;
+        margin-bottom: $small-border;
+
+    }
+
+    .categories-fun ul {
+        display: flex;
+        list-style: none;
+        margin: 0;
+        padding: 0;
+    }
+
+    .categories-fun li {
+        margin-right: 10px;
+        font-size: 16px;
+        font-family: "Glam-queen";
+        font-size: 3em;
+        color: $category-fun-color;
+    }
+
     .lead {
         margin-top: 10px;
         font-size: 14px;
