--- a/src/app/components/articles/article-type-main/article-type-main.component.html
+++ b/src/app/components/articles/article-type-main/article-type-main.component.html
@@ -3,7 +3,7 @@
     <img src={{article.publication_image}}>
     <div class="blur">
         <div class="description">
-            <h4 [ngClass]="article.categories[0].slug+'-color'">{{article.categories[0].name}} !</h4>
+            <h4 [ngClass]="article.category.slug+'-color'">{{article.category.name}} !</h4>
             <h2>{{article.title}}</h2>
             <time>{{article.publication_date | date : 'dd/M/yy, HH:mm'}}</time>
 
