--- a/src/app/components/articles/article-type-small/article-type-small.component.html
+++ b/src/app/components/articles/article-type-small/article-type-small.component.html
@@ -1,8 +1,8 @@
 <article class="main-type3" [routerLink]="APP_ROUTES.articles+'/'+article.slug" [queryParams]="{id: article.id}">
     <img src={{article.publication_image}}>
-    <div [ngClass]="'description '+article.categories[0].slug+'-background'">
+    <div [ngClass]="'description '+article.category.slug+'-background'">
         <div class="titles">
-            <h4 [ngClass]="article.categories[0].slug+'-color'"><span>{{article.categories[0].name}}</span></h4>
+            <h4 [ngClass]="article.category.slug+'-color'"><span>{{article.category.name}}</span></h4>
             <h3>{{article.title}}</h3>
             <time>{{article.publication_date | date : 'dd/M/yy' }}</time>
         </div>
