--- a/src/app/pages/articles/articles.component.html
+++ b/src/app/pages/articles/articles.component.html
@@ -2,7 +2,7 @@
 <div *ngIf="articles" class="top">
     <app-article-type-main [article]="articles[0]" class="main"></app-article-type-main>
     <div class="side">
-        <h2>Plus de {{articles[0].categories[0].name}}</h2>
+        <h2>Plus de {{articles[0].category.name}}</h2>
         <app-article-type-side [article]="article" *ngFor="let article of getSideArticles()" ></app-article-type-side>
     </div>
 </div>
