--- a/src/app/components/category-block/category-block.component.html
+++ b/src/app/components/category-block/category-block.component.html
@@ -1,4 +1,4 @@
-<div class="categories-category" *ngFor="let category of categories">
+<div class="categories-category">
   <a class="categories-header" [id]="category.slug + '-header'" routerLink="{{APP_ROUTES.category(category.slug)}}"
     [queryParams]="{id: category.id, name:category.name, slug:category.slug}">
     <h2 [id]="category.slug + '-title'">{{category.name}}</h2>
@@ -9,7 +9,7 @@
   </a>
 
   <div class="categories-3articles" *ngIf="articles">
-    <app-article-type-small [article]="article" *ngFor="let article of articles.slice(0,3)"
+    <app-article-type-small [article]="article" *ngFor="let article of articles"
       class="category-article"></app-article-type-small>
   </div>
 </div>
