--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,24 +1,24 @@
 @use "/src/_import.scss" as *;
 
 @media screen and (min-width: $min-width-desktop) {
-    #foot {
-        background-color: #FECEE9;
-        height: 20%;
+  #foot {
+    background-color: #FECEE9;
+    height: 20%;
 
-        #marquee {
+    #marquee {
 
 
-            background-color: #FECEE9;
-            color: $secondary-text-color;
-            text-align: center;
-            visibility: visible;
-        }
-
-        #smallscr {
-            visibility: hidden;
-        }
-
+      background-color: #FECEE9;
+      color: $secondary-text-color;
+      text-align: center;
+      visibility: visible;
     }
+
+    #smallscr {
+      visibility: hidden;
+    }
+
+  }
 
 
 
@@ -28,18 +28,19 @@
 
 @media screen and (max-width: $min-width-desktop) {
 
-    #foot {
+  #foot {
+    display: none;
 
 
 
-        background-color: #FECEE9;
+    background-color: #FECEE9;
 
-        #marquee {
-            visibility: hidden;
-        }
-
-
+    #marquee {
+      visibility: hidden;
     }
+
+
+  }
 
 
 
