First version of the user modal

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -138,5 +138,10 @@ h2.h2-title-article-fun {
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.modal-login {
+  max-width: 90%;
+  width: 27.5rem;
+  height: 70%;
+
+  
+}
