Fix models angular 2

--- a/src/app/components/articles/article/title/title.component.html
+++ b/src/app/components/articles/article/title/title.component.html
@@ -5,7 +5,7 @@
             <ul>
                 <li [ngClass]="article.category.name">{{ article.category.name }}</li>
             </ul>
-            <p class="lead">{{ article.lead }}</p>
+            <p class="leads">{{ article.leads }}</p>
         </div>
         <div class="author">
             <p>{{ article.author.firstname }} {{ article.author.lastname }}
