--- a/src/app/components/articles/article/title/title.component.scss
+++ b/src/app/components/articles/article/title/title.component.scss
@@ -123,7 +123,7 @@
         color: $category-fun-color;
     }
 
-    .lead {
+    .leads {
         margin-top: 10px;
         font-size: 14px;
         color: $main-text-color;
