--- a/src/app/components/articles/article/other/other.component.scss
+++ b/src/app/components/articles/article/other/other.component.scss
@@ -14,6 +14,13 @@
     .carie {
       background-color: $category-health-color;
     }
+    .fun {
+      background-color: $category-fun-color;
+    }
+    .ca-coute-bonbon {
+      background-color: $category-economy-color;
+    }
+
     h2 {
       padding: $small-border;
       margin-bottom: $small-border;
