--- a/src/app/components/comment/comment.component.html
+++ b/src/app/components/comment/comment.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="comment" class="comment">
-<h4>{{ comment.user.firstname + " " + comment.user.lastname }}</h4>
-<p>{{ comment.content }}</p>
-<button (click)="deleteComment(comment)">Supprimer</button>
+    <h4>{{ comment.user.firstname + " " + comment.user.lastname }}</h4>
+    <p>{{ comment.content }}</p>
+    <i class="fa-solid fa-trash {{categorySlug}}-comment delete-icon" (click)="deleteComment(comment)"></i>
 </div>
