--- a/src/app/pages/article/article.component.html
+++ b/src/app/pages/article/article.component.html
@@ -2,7 +2,7 @@
     <app-article-title [article]="article" class="title"></app-article-title>
     <app-article-body [content]="article.content" class="body"></app-article-body>
     <div class="article-bottom">
-        <app-article-comment [id]="article.id" class="comment"></app-article-comment>
+        <app-article-comment [article]="article" class="comment"></app-article-comment>
         <app-article-other [categorySlug]="article.category.slug" class="other"></app-article-other>
     </div>
 </article>
