--- a/src/_import.scss
+++ b/src/_import.scss
@@ -17,3 +17,43 @@ $small-border: 0.5rem;
 $big-border: 2rem;
 
 $min-width-desktop: 800px;
+
+.fun-color {
+  color: $category-fun-color;
+}
+
+.sport-color {
+  color: $category-sport-color;
+}
+
+.carie-color {
+  color: $category-health-color;
+}
+
+.miam-color {
+  color: $category-food-color;
+}
+
+.ca-coute-bonbon-color {
+  color: $category-economy-color;
+}
+
+.fun-background {
+  background-color: $category-fun-color;
+}
+
+.sport-background {
+  background-color: $category-sport-color;
+}
+
+.carie-background {
+  background-color: $category-health-color;
+}
+
+.miam-background {
+  background-color: $category-food-color;
+}
+
+.ca-coute-bonbon-background {
+  background-color: $category-economy-color;
+}
