--- a/src/app/components/category-block/category-block.component.html
+++ b/src/app/components/category-block/category-block.component.html
@@ -1,7 +1,7 @@
 <div class="categories-category">
   <a class="categories-header" [id]="category.slug + '-header'" routerLink="{{APP_ROUTES.category(category.slug)}}"
     [queryParams]="{id: category.id, name:category.name, slug:category.slug}">
-    <h2 [id]="category.slug + '-title'">{{category.name}}</h2>
+    <h2 [ngClass]="category.slug + '-color'">{{category.name}}</h2>
     <p>
       <span>Voir plus</span>
       <span>></span>
