--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,6 +4,11 @@
     display: flex;
     gap: $main-border;
     margin: $main-border 0;
+    justify-content: center;
+}
+
+#page-content {
+  padding-bottom: 70px;
 }
 
 @media screen and (min-width: $min-width-desktop) {
@@ -12,13 +17,17 @@
       /* Set the width to 70% of the screen */
       max-width: 71em;
       /* Optional: Set a maximum width for larger screens */
-      padding-left: 0.75rem;
-      padding-right: 0.75rem;
+      padding-left: $big-border;
+      padding-right: $big-border;
       background-color: $main-background-color;
       box-shadow: 0.75rem 0 0 $secondary-background-color, -0.75rem 0 0 $secondary-background-color;
       overflow: initial;
       margin: 0 auto;
       /* Center the element horizontally */
+    }
+
+    .stock {
+      justify-content: flex-start;
     }
   
     #page-wrap {
