--- a/src/app/components/articles/article-type-side/article-type-side.component.html
+++ b/src/app/components/articles/article-type-side/article-type-side.component.html
@@ -1,6 +1,6 @@
 <article [ngClass]="'main-type2 '+article.category.slug+'-background'" [routerLink]="APP_ROUTES.articles+'/'+article.slug" [queryParams]="{id: article.id}">
     <div class="side-band">
-        <img src={{article.publicationImage}}>
+        <div class="image-side"><img src={{article.publicationImage}}></div>
         <div class="description">
             <h4>{{article.publicationDate | date : 'HH:mm'}} | <span [ngClass]="article.category.slug+'-color'">{{article.category.name}}</span></h4>
             <h3>{{article.title}}</h3>
