--- a/src/app/components/articles/article-type-small/article-type-small.component.scss
+++ b/src/app/components/articles/article-type-small/article-type-small.component.scss
@@ -4,34 +4,33 @@
 
     height: 300px;
     width:100%;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
+    
     background-size: cover;
     background-position: center;
 
+    transition: 0.3s ease-in-out;
+
+    &:hover {
+        box-shadow: 10px 10px 10px $secondary-text-color;
+    }
     .fun-background{
         background-color:$category-fun-color;
-        opacity:0.7;
     }
     
     .sport-background{
         background-color:$category-sport-color;
-        opacity:0.7;
     }
     
     .carie-background{
         background-color:$category-health-color;
-        opacity:0.7;
     }
     
     .miam-background{
         background-color:$category-food-color;
-        opacity:0.7;
     }
     
     .ca-coute-bonbon-background{
         background-color:$category-economy-color;
-        opacity:0.7;
     }
 
     .description {
@@ -41,6 +40,8 @@
         position:relative;
         object-position: left bottom;
         padding-left:.5rem;
+        opacity:0.7;
+
 
         .titles {
             padding-top:1px;
@@ -94,4 +95,24 @@
         
     }
 
+}
+
+@media (min-width: 768px) {
+    .radius-1 {
+        border-top-left-radius: 15px;
+        border-bottom-left-radius: 15px;
+    }
+
+    .radius-3 {
+        border-top-right-radius: 15px;
+        border-bottom-right-radius: 15px;
+    }
+
+    .radius-bottom-1 {
+        border-bottom-left-radius: 15px;
+    }
+
+    .radius-bottom-3 {
+        border-bottom-right-radius: 15px;
+    }
 }
