--- a/src/app/pages/category/category.component.html
+++ b/src/app/pages/category/category.component.html
@@ -5,7 +5,7 @@
     </h1>
   </div>
   <div class="category-articles">
-    <app-article-type-small [article]="article" *ngFor="let article of articles"
+    <app-article-type-small [article]="article" *ngFor="let article of articles; let i = index" [pos]="(i % 3) + 1"
       class="category-article"></app-article-type-small>
   </div>
 </section>
