add the scale on article-type-small

--- a/src/app/components/articles/article-type-small/article-type-small.component.scss
+++ b/src/app/components/articles/article-type-small/article-type-small.component.scss
@@ -12,6 +12,9 @@
 
     &:hover {
         box-shadow: 10px 10px 10px $secondary-text-color;
+        transform: scale(1.1);
+        z-index: 10;
+        position: relative;
     }
     .fun-background{
         background-color:$category-fun-color;
