--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -4,7 +4,6 @@
   #head {
     width: 100%;
     height: 90px;
-
     border-image-slice: fill;
     display: flex;
     justify-content: space-around;
@@ -25,8 +24,16 @@
       align-self: center;
       visibility: visible;
       height: 90px;
-    }
 
+      ul {
+
+        li:nth-of-type(1),
+        li:nth-of-type(2),
+        li:nth-of-type(8) {
+          color: $secondary-text-color;
+        }
+      }
+    }
 
     ul,
     li,
@@ -38,9 +45,6 @@
       gap: 13px;
       height: 90px;
       text-decoration: none;
-      color: $secondary-text-color;
-
-
     }
 
     li {
@@ -52,31 +56,6 @@
       font-weight: bold;
     }
 
-    //gastronomie
-    #miam {
-      color: $category-food-color;
-    }
-
-    //sante
-    #carie {
-      color: $category-health-color;
-    }
-
-    //economie
-    #ca-coute-bonbon {
-      color: $category-economy-color;
-    }
-
-    //sport
-    #sport {
-      color: $category-sport-color;
-    }
-
-    //loisir
-    #fun {
-      color: $category-fun-color;
-    }
-
     #smallscr {
       visibility: hidden;
     }
@@ -84,7 +63,6 @@
 }
 
 @media screen and (max-width: $min-width-desktop) {
-
 
   #head {
     width: 100%;
@@ -113,10 +91,6 @@
     align-self: center;
   }
 
-  a {
-    height: 3rem;
-  }
-
   ul,
   li,
   a {
@@ -126,11 +100,20 @@
     align-items: center;
     height: max-content;
     text-decoration: none;
-    color: $secondary-text-color;
+  }
+
+  a {
+    height: 3rem;
+    background-color: #FECEE9;
+    text-decoration: none;
+    align-items: center;
+    gap: 12px;
+    height: 4rem;
   }
 
   li {
     height: 70px;
+    border: 1px solid;
   }
 
   .divnav {
@@ -139,25 +122,14 @@
     left: 0;
     background: #FECEE9;
     width: 100%;
-    /* height: 70px; */
     z-index: 10;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
 
-    li {
-      border: 1px solid;
-    }
-
-    a {
-      background-color: #FECEE9;
-      //box-sizing: border border-box;
-      text-decoration: none;
-      //display: flex;
-      //justify-content: space-between;
-
-      align-items: center;
-      gap: 12px;
-      height: 4rem;
+    li:nth-of-type(1),
+    li:nth-of-type(2),
+    li:nth-of-type(8) {
+      color: $secondary-text-color;
     }
   }
 
@@ -165,15 +137,11 @@
     background-image: image-set("/assets/images/home.png");
     background-repeat: no-repeat;
     color: transparent;
-
   }
-
-
 
   #login {
     background-image: image-set("/assets/images/user.png");
     background-repeat: no-repeat;
     color: transparent;
   }
-
 }
